# opencv.full

./: .gitignore  OpenCvIOS.podspec  OpenCvMAC.podspec  README.md  build.sh  conanfile.py  options.txt
.github/workflows/: android.yml  apple.yml  build_test_release.yaml  linux.yml  release.yml  ubuntu-aarch64.yaml  wasm.yml  windows.yml
cmake/: ffmpeg-config.cmake  ios.toolchain.cmake
patches/: opencv-4.10.0-detect_ffmpeg.patch
profiles/: ios-armv8  ios-x86_64  wasm
profiles/arm-toolchain/test_package/: CMakeUserPresets.json
scripts/: build_framework.sh  thin_dylib_macos.sh
test/: CMakeLists.txt
